--- a/product-default.html
+++ b/product-default.html
@@ -148,7 +148,7 @@
 
 
 
-    <nav class="navigation--mobile-product"><a class="ps-btn ps-btn--black" href="#" data-toggle="tooltip" title="This is a prototype">View Mobile Number</a><a class="ps-btn" href="#" data-toggle="tooltip" title="This is a prototype">Contact Seller</a></nav>
+    <nav class="navigation--mobile-product"><a class="ps-btn" href="#" data-toggle="tooltip" title="This is a prototype">Contact Seller</a></nav>
     <div class="ps-breadcrumb">
         <div class="ps-container">
             <ul class="breadcrumb">
@@ -242,7 +242,7 @@
                                             <input class="form-control" type="text" placeholder="1">
                                         </div>
                                     </figure> -->
-                                    <a class="ps-btn ps-btn--black show-mobile-number" href="#">View Mobile Number</a>
+                                    <!-- <a class="ps-btn ps-btn--black show-mobile-number" href="#">View Mobile Number</a> -->
                                     <a class="ps-btn" href="#" data-toggle="modal" data-target="#exampleModalCenter">Contact Seller</a>
                                     <div class="ps-product__actions"><a href="#" data-toggle="tooltip" title="This is a prototype"><i class="icon-heart"></i></a><a href="#" data-toggle="tooltip" title="This is a prototype"><i class="icon-chart-bars"></i></a></div>
                                 </div>
@@ -402,7 +402,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="ps-page__right">
+                <!-- <div class="ps-page__right">
                     <div class="ps-block--vendor">
                         <div class="ps-block__thumbnail"><img src="img/vendor/vendor-store.jpg" alt=""></div>
                         <div class="ps-block__container">
@@ -425,7 +425,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
 
             <div class="ps-section--default">
