--- a/product-default.html
+++ b/product-default.html
@@ -842,8 +842,8 @@
                             <input class="form-control" type="tel" placeholder="ex: 01XXX XXX XXX">
                         </div>
                         <div class="form-group">
-                            <label>Comment to Seller</label>
-                            <textarea class="form-control" rows="6" placeholder="Write your Comment here"></textarea>
+                            <label>Message to Seller</label>
+                            <textarea class="form-control" rows="6" placeholder="Write your message here"></textarea>
                         </div>
                         <div class="form-group submit">
                             <a class="ps-btn ps-btn--black" href="product-default.html">Send</a>
