--- a/index.html
+++ b/index.html
@@ -153,14 +153,14 @@
                 <div class="ps-section__left">
                     <div class="ps-carousel--nav-inside owl-slider" data-owl-auto="true" data-owl-loop="true" data-owl-speed="5000" data-owl-gap="0" data-owl-nav="true" data-owl-dots="true" data-owl-item="1" data-owl-item-xs="1" data-owl-item-sm="1" data-owl-item-md="1"
                         data-owl-item-lg="1" data-owl-duration="1000" data-owl-mousedrag="on">
-                        <a href="#" data-toggle="tooltip" title="This is a prototype"><img src="img/slider/home-4/1.jpg" alt=""></a>
-                        <a href="#" data-toggle="tooltip" title="This is a prototype"><img src="img/slider/home-4/2.jpg" alt=""></a>
-                        <a href="#" data-toggle="tooltip" title="This is a prototype"><img src="img/slider/home-4/3.jpg" alt=""></a>
-                        <a href="#" data-toggle="tooltip" title="This is a prototype"><img src="img/slider/home-4/4.jpg" alt=""></a>
+                        <a href="#"><img src="img/slider/home-4/1.jpg" alt=""></a>
+                        <a href="#"><img src="img/slider/home-4/2.jpg" alt=""></a>
+                        <a href="#"><img src="img/slider/home-4/3.jpg" alt=""></a>
+                        <a href="#"><img src="img/slider/home-4/4.jpg" alt=""></a>
                     </div>
                 </div>
                 <div class="ps-section__right">
-                    <a class="ps-collection" href="#" data-toggle="tooltip" title="This is a prototype"><img src="img/slider/home-4/custom-left.jpg" alt=""></a>
+                    <a class="ps-collection" href="#"><img src="img/slider/home-4/custom-left.jpg" alt=""></a>
                 </div>
             </div>
         </div>
