--- a/my-account.html
+++ b/my-account.html
@@ -276,7 +276,7 @@
                     <h4 class="widget-title">Contact us</h4>
                     <div class="widget_content">
                         <p>Call us 24/7</p>
-                        <h3>+88 01730442211</h3>
+                        <h3>+88 017XXXXXXXX</h3>
                         <p>BGMEA Complex, House # 7/7A, Sector # 17, Block # H-1, Uttara, Dhaka - 1230, Bangladesh. </p>
                         <ul class="ps-list--social">
                             <li><a class="facebook" href="#" data-toggle="tooltip" title="This is a prototype"><i class="fa fa-facebook"></i></a></li>
